--- a/src/main/resources/templates/content/statistics/statistics.html
+++ b/src/main/resources/templates/content/statistics/statistics.html
@@ -20,10 +20,17 @@
             display: flex;
             justify-content: center;
         }
+        .text-over-cut {
+            display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 0;
+        }
     </style>
 
     <!-- html 코드 작성 -->
-    <div style="margin-left: 150px; margin-right: 150px; margin-top: 80px; height: 1800px;">
+    <div style="margin-left: 150px; margin-right: 150px; margin-top: 60px; height: 2000px;">
         <div class="row">
             <div class="col">
                 <!-- 주요 화재통계 -->
@@ -172,16 +179,20 @@
 
                 <!-- 1. 화재장소 -->
                 <div id="fireLocation" class="content" style="display: none;">
-                    <div class="row mt-5 mb-5">
+                    <div class="row mt-5 mb-3">
                         <div class="col text-center">
                             <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 23px;">2021-2023</span>
-                            <span style="font-size: 23px; font-weight: bold;">발화장소 통계 </span>
+                        </div>
+                    </div>
+                    <div class="row mb-5">
+                        <div class="col text-center">
+                            <span id="fireLocationTitle" class="text-secondary" style="font-size: 23px; font-weight: bold;">발화장소 통계 </span>
                         </div>
                     </div>
                     <!-- 3개년 전체 화재장소 막대그래프 -->
                     <div class="row text-center mb-5">
                         <div class="col canvas-container">
-                            <canvas id="bar-chart" width="1400" height="500"></canvas>
+                            <canvas id="bar-chart" width="1500" height="500"></canvas>
                         </div>
                     </div>
                     <!-- 2021-2023 화재장소 원그래프 -->
@@ -212,16 +223,121 @@
                         </div>
                     </div>
                 </div>
-                </div>
                 <!-- 2. 화재요인 -->
                 <div id="fireCause" class="content" style="display: none;">
-                    화재요인임
+                    <div class="row mt-5 mb-3">
+                        <div class="col text-center">
+                            <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 23px;">2021-2023</span>
+                        </div>
+                    </div>
+                    <div class="row mb-5">
+                        <div class="col text-center">
+                            <span id="fireCauseTitle" class="text-secondary" style="font-size: 23px; font-weight: bold;">발화요인 통계 </span>
+                        </div>
+                    </div>
+                    <!-- 3개년 전체 화재요인 막대그래프 -->
+                    <div class="row text-center mb-5">
+                        <div class="col canvas-container">
+                            <canvas id="bar-chart-2" width="1200" height="450"></canvas>
+                        </div>
+                    </div>
+                    <!-- 2021-2023 화재요인 원그래프 -->
+                    <div class="row">
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2021</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-2-1" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2022</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-2-2" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2023</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-2-3" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!-- 3. 최초착화물임 -->
+                <!-- 3. 최초착화물 -->
                 <div id="ignitionMaterial" class="content" style="display: none;">
-                    최초착화물임
+                    <div class="row mt-5 mb-3 text-center">
+                        <div class="col text-center">
+                            <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 23px;">2021-2023</span>
+                        </div>
+                    </div>
+                    <div class="row mb-5 text-center">
+                        <div class="col-3"></div>
+                        <div class="col-6 text-center">
+                            <span id="fireChelateTitle" class="text-secondary" style="font-size: 23px; font-weight: bold;">최초착화물 통계 </span>
+                        </div>
+                        <div class="col-3">
+                            <div class="row text-center">
+                                <div class="col ms-1 me-1" style="padding-top: 10px; padding-bottom: 10px; background-color: lemonchiffon;">
+                                    <div class="text-secondary-emphasis text-start">
+                                        <div class="d-flex">
+                                            <div class="me-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="15px" height="15px" fill="currentColor" class="bi bi-question-circle-fill" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247m2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/>
+                                                </svg>
+                                            </div>
+                                            <div style="font-size: 17px; font-weight: bold;">최초착화물이란?</div>
+                                        </div>
+                                        <div>
+                                            <span class="me-4"> </span>
+                                            <span style="font-size: 13px;">발화열원에 의해 불이 붙은 최초의 가연물</span>
+                                        </div>
+                                        <div class="text-secondary-emphasis text-end"style="font-size: 10px;">
+                                        화재조사 및 보고규정 [소방청훈령 제311호, 2023. 3. 8, 전부개정]
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3개년 전체 화재요인 막대그래프 -->
+                    <div class="row text-center mt-3 mb-5">
+                        <div class="col canvas-container">
+                            <canvas id="bar-chart-3" width="1200" height="450"></canvas>
+                        </div>
+                    </div>
+                    <!-- 2021-2023 화재요인 원그래프 -->
+                    <div class="row">
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2021</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-3-1" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2022</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-3-2" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+                            <div class="mb-2 mt-5">
+                                <span class="badge text-bg-secondary rounded-0 me-2" style="font-size: 20px;">2023</span>
+                            </div>
+                            <div class="canvas-container">
+                                <canvas id="pie-chart-3-3" width="500" height="500"></canvas>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
