--- a/src/main/resources/templates/content/dmg/dmg_list.html
+++ b/src/main/resources/templates/content/dmg/dmg_list.html
@@ -63,132 +63,158 @@
       padding: 0px;
     }
   </style>
-  <div class="row" style="height: 810px;">
-    <div class="col-6">
-      <div class="row">
-        <div class="col">
-          피해통계
+
+  <div style="margin-left: 150px; margin-right: 150px; margin-top: 60px; height: 2000px;">
+    <div class="row">
+      <div class="col">
+        <!-- 헤더 -->
+        <div class="row mb-3">
+          <div class="col">
+            <div class="d-flex" style="padding-top: 3px; padding-bottom: 10px;">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill="currentColor"
+                  class="bi bi-clipboard text-secondary" viewBox="0 0 16 16">
+                  <path
+                    d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z" />
+                  <path
+                    d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z" />
+                </svg>
+              </div>
+              <div class="text-secondary" style="font-size: 16px; margin-left: 10px;">홈 > 피해통계</div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <table class="table text-center">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <thead>
-              <tr>
-                <td>연도</td>
-                <td>2021</td>
-                <td>2022</td>
-                <td>2023</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>사고자 수</td>
-                <td>[[${yearIjd[0].injrdprPercnt}]]</td>
-                <td>[[${yearIjd[1].injrdprPercnt}]]</td>
-                <td>[[${yearIjd[2].injrdprPercnt}]]</td>
-              </tr>
-              <tr>
-                <td>부상자 수</td>
-                <td>[[${yearIjd[0].vctmPercnt}]]</td>
-                <td>[[${yearIjd[1].vctmPercnt}]]</td>
-                <td>[[${yearIjd[2].vctmPercnt}]]</td>
-              </tr>
-              <tr>
-                <td>총 인명 피해자 수</td>
-                <td>[[${totalIjd[0]}]]</td>
-                <td>[[${totalIjd[1]}]]</td>
-                <td>[[${totalIjd[2]}]]</td>
-              </tr>
-              <tr>
-                <td>동산피해</td>
-                <td>[[${yearMoney[0].perpDmgAmt}]]000\</td>
-                <td>[[${yearMoney[1].perpDmgAmt}]]000\</td>
-                <td>[[${yearMoney[2].perpDmgAmt}]]000\</td>
-              </tr>
-              <tr>
-                <td>부동산피해</td>
-                <td>[[${yearMoney[0].restDmgAmt}]]000\</td>
-                <td>[[${yearMoney[1].restDmgAmt}]]000\</td>
-                <td>[[${yearMoney[2].restDmgAmt}]]000\</td>
-              </tr>
-              <tr>
-                <td>총 재산피해 소계 금액</td>
-                <td>[[${totalMoney[0]}]]000\</td>
-                <td>[[${totalMoney[1]}]]000\</td>
-                <td>[[${totalMoney[2]}]]000\</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="row mb-4 border-bottom border-black border-2" style="padding-bottom: 5px;">
+          <div class="col">
+            <h3 style="font-weight: bold;">피해통계</h3>
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- 그래프 -->
+    <div class="row">
+      <div class="col">
+        <div class="row" style="margin-top: 30px;">
+          <div class="col-6 layer small-layer">
+            <div class="row" id="first_chart">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartPeoDMG2021" style="width: 300; height: 300;"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2022 인명피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartPeoDMG2022" style="width: 300; height: 300;"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2023 인명피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartPeoDMG2023" style="width: 300; height: 300;"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartPeoDMG2021R" style="width: 300; height: 300;"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-
-    <div class="col-6">
-      <div class="row" style="margin-top: 30px;">
-        <div class="col-6 layer small-layer">
-          <div class="row" id="first_chart">
-            <div class="col">
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+          <div class="col-6 layer small-layer">
+            <div class="row" id="second_chart">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2021 재산피해</h4>
+                      </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartPeoDMG2021" style="width: 100%; height: 100%;"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2022 인명피해</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartPeoDMG2022" style="width: 100%; height: 100%;"></canvas>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartMnDMG2021" style="width: 100%; height: 100%;"></canvas>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2023 인명피해</h4>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2022 재산피해</h4>
+                      </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartPeoDMG2023" style="width: 100%; height: 100%;"></canvas>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartMnDMG2022" style="width: 100%; height: 100%;"></canvas>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2023 재산피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartMnDMG2023" style="width: 100%; height: 100%;"></canvas>
+                      </div>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartPeoDMG2021R" style="width: 100%; height: 100%;"></canvas>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <div class="row">
+                      <div class="col">
+                        <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <canvas id="doughnut-chartMnDMG2021R" style="width: 100%; height: 100%;"></canvas>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -196,112 +222,110 @@
             </div>
           </div>
         </div>
-
-
-
-        <div class="col-6 layer small-layer">
-          <div class="row" id="second_chart">
-            <div class="col">
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2021 재산피해</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartMnDMG2021" style="width: 100%; height: 100%;"></canvas>
-                    </div>
-                  </div>
+        <div class="row">
+          <div class="col-6 layer more-small-layer">
+            <div class="row" id="first_total">
+              <div class="col">
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2022 재산피해</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartMnDMG2022" style="width: 100%; height: 100%;"></canvas>
-                    </div>
-                  </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[1]}]]명</div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2023 재산피해</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartMnDMG2023" style="width: 100%; height: 100%;"></canvas>
-                    </div>
-                  </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[2]}]]명</div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col">
-                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <canvas id="doughnut-chartMnDMG2021R" style="width: 100%; height: 100%;"></canvas>
-                    </div>
-                  </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-6 layer more-small-layer">
-          <div class="row" id="first_total">
-            <div class="col">
-              <div class="row">
-                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[1]}]]명</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[2]}]]명</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 layer more-small-layer">
-          <div class="row" id="second_total">
-            <div class="col">
-              <div class="row">
-                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[1]}]]000\</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[2]}]]000\</div>
-              </div>
-              <div class="row">
-                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+          <div class="col-6 layer more-small-layer">
+            <div class="row" id="second_total">
+              <div class="col">
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+                </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[1]}]]000\</div>
+                </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[2]}]]000\</div>
+                </div>
+                <div class="row">
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- 테이블 -->
+    <div class="row">
+      <div class="col">
+        <table class="table text-center">
+          <colgroup>
+            <col width="25%">
+            <col width="25%">
+            <col width="25%">
+            <col width="25%">
+          </colgroup>
+          <thead>
+            <tr>
+              <td>연도</td>
+              <td>2021</td>
+              <td>2022</td>
+              <td>2023</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>사고자 수</td>
+              <td>[[${yearIjd[0].injrdprPercnt}]]</td>
+              <td>[[${yearIjd[1].injrdprPercnt}]]</td>
+              <td>[[${yearIjd[2].injrdprPercnt}]]</td>
+            </tr>
+            <tr>
+              <td>부상자 수</td>
+              <td>[[${yearIjd[0].vctmPercnt}]]</td>
+              <td>[[${yearIjd[1].vctmPercnt}]]</td>
+              <td>[[${yearIjd[2].vctmPercnt}]]</td>
+            </tr>
+            <tr>
+              <td>총 인명 피해자 수</td>
+              <td>[[${totalIjd[0]}]]</td>
+              <td>[[${totalIjd[1]}]]</td>
+              <td>[[${totalIjd[2]}]]</td>
+            </tr>
+            <tr>
+              <td>동산피해</td>
+              <td>[[${yearMoney[0].perpDmgAmt}]]000\</td>
+              <td>[[${yearMoney[1].perpDmgAmt}]]000\</td>
+              <td>[[${yearMoney[2].perpDmgAmt}]]000\</td>
+            </tr>
+            <tr>
+              <td>부동산피해</td>
+              <td>[[${yearMoney[0].restDmgAmt}]]000\</td>
+              <td>[[${yearMoney[1].restDmgAmt}]]000\</td>
+              <td>[[${yearMoney[2].restDmgAmt}]]000\</td>
+            </tr>
+            <tr>
+              <td>총 재산피해 소계 금액</td>
+              <td>[[${totalMoney[0]}]]000\</td>
+              <td>[[${totalMoney[1]}]]000\</td>
+              <td>[[${totalMoney[2]}]]000\</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+
   </div>
+
 
 </th:block>
 
