--- a/src/main/resources/templates/fragment/result_layout.html
+++ b/src/main/resources/templates/fragment/result_layout.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>화재데이터게시글</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<!-- <link rel="stylesheet" href="/css/common.css"> -->
+<link rel="stylesheet" href="/css/common.css">
 <link rel="stylesheet" href="/css/eunji_side.css">
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
